--- a/DoitDoitChu/Solo/CheckListTestTableViewCell.xib
+++ b/DoitDoitChu/Solo/CheckListTestTableViewCell.xib
@@ -3,9 +3,16 @@
     <device id="retina6_12" orientation="portrait" appearance="light"/>
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="21505"/>
+        <capability name="Named colors" minToolsVersion="9.0"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
+        <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
+    <customFonts key="customFonts">
+        <array key="Pretendard-Medium.otf">
+            <string>Pretendard-Medium</string>
+        </array>
+    </customFonts>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
@@ -16,7 +23,7 @@
                 <rect key="frame" x="0.0" y="0.0" width="320" height="58"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
-                    <stackView opaque="NO" contentMode="scaleToFill" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="PN8-Nl-ONq">
+                    <stackView opaque="NO" contentMode="scaleToFill" ambiguous="YES" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="PN8-Nl-ONq">
                         <rect key="frame" x="16" y="17" width="232" height="24"/>
                         <subviews>
                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="unCheckSquare" translatesAutoresizingMaskIntoConstraints="NO" id="uFL-aP-K9K">
@@ -31,31 +38,48 @@
                                     <constraint firstAttribute="height" constant="24" id="NPX-EM-AGB"/>
                                     <constraint firstAttribute="width" constant="200" id="ljj-Bu-RVt"/>
                                 </constraints>
-                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <fontDescription key="fontDescription" name="Pretendard-Medium" family="Pretendard" pointSize="17"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
                         </subviews>
                     </stackView>
-                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="meatBall" translatesAutoresizingMaskIntoConstraints="NO" id="8Ym-He-PFb">
-                        <rect key="frame" x="284" y="17" width="20" height="20"/>
+                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="fuw-qK-AlB">
+                        <rect key="frame" x="287" y="19" width="20" height="20"/>
+                        <subviews>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="meatBall" translatesAutoresizingMaskIntoConstraints="NO" id="8Ym-He-PFb">
+                                <rect key="frame" x="0.0" y="0.0" width="20" height="20"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            </imageView>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="bbr-xN-FUO">
+                                <rect key="frame" x="0.0" y="0.0" width="20" height="20"/>
+                                <state key="normal" title="Button"/>
+                                <buttonConfiguration key="configuration" style="plain"/>
+                            </button>
+                        </subviews>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                         <constraints>
-                            <constraint firstAttribute="height" constant="20" id="Ko1-Gt-yad"/>
-                            <constraint firstAttribute="width" constant="20" id="OTU-gB-jUM"/>
+                            <constraint firstAttribute="bottom" secondItem="bbr-xN-FUO" secondAttribute="bottom" id="RwM-kC-2ma"/>
+                            <constraint firstAttribute="height" constant="20" id="hoG-aQ-0Iw"/>
+                            <constraint firstItem="bbr-xN-FUO" firstAttribute="leading" secondItem="fuw-qK-AlB" secondAttribute="leading" id="uyE-cw-WIX"/>
+                            <constraint firstAttribute="width" constant="20" id="vcL-DJ-pVL"/>
+                            <constraint firstAttribute="trailing" secondItem="bbr-xN-FUO" secondAttribute="trailing" id="ygq-r2-pKd"/>
+                            <constraint firstItem="bbr-xN-FUO" firstAttribute="top" secondItem="fuw-qK-AlB" secondAttribute="top" id="zxb-I4-PNN"/>
                         </constraints>
-                    </imageView>
+                    </view>
                 </subviews>
+                <color key="backgroundColor" name="backView"/>
                 <constraints>
-                    <constraint firstItem="8Ym-He-PFb" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="17" id="ekl-vg-1K5"/>
+                    <constraint firstAttribute="trailing" secondItem="fuw-qK-AlB" secondAttribute="trailing" constant="13" id="Isl-YM-mfD"/>
+                    <constraint firstAttribute="bottom" secondItem="fuw-qK-AlB" secondAttribute="bottom" constant="19" id="UiH-fG-Mg7"/>
                     <constraint firstItem="PN8-Nl-ONq" firstAttribute="centerY" secondItem="H2p-sc-9uM" secondAttribute="centerY" id="pkT-cG-c4k"/>
-                    <constraint firstItem="PN8-Nl-ONq" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="16" id="qfd-vw-cJ0"/>
-                    <constraint firstAttribute="trailing" secondItem="8Ym-He-PFb" secondAttribute="trailing" constant="16" id="vqj-uT-8tm"/>
                 </constraints>
             </tableViewCellContentView>
             <viewLayoutGuide key="safeArea" id="njF-e1-oar"/>
             <connections>
                 <outlet property="TodoListLabel" destination="XWm-ti-uBf" id="7hh-6b-nVf"/>
                 <outlet property="checkImage" destination="uFL-aP-K9K" id="vu5-bW-h60"/>
+                <outlet property="meatBallButton" destination="bbr-xN-FUO" id="S2v-3Q-iiR"/>
                 <outlet property="moreImfo" destination="8Ym-He-PFb" id="ooQ-z8-YWJ"/>
             </connections>
             <point key="canvasLocation" x="-41.221374045801525" y="37.323943661971832"/>
@@ -64,5 +88,11 @@
     <resources>
         <image name="meatBall" width="20" height="20"/>
         <image name="unCheckSquare" width="24" height="24"/>
+        <namedColor name="backView">
+            <color red="0.97254901960784312" green="0.97254901960784312" blue="0.97254901960784312" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </namedColor>
+        <systemColor name="systemBackgroundColor">
+            <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+        </systemColor>
     </resources>
 </document>
